<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/forumFragment"
        android:icon="@drawable/ic_forum"
        android:title="@string/nav_forum" />
    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/ic_friends"
        android:title="@string/nav_friends" />
    <item
        android:id="@+id/chatListFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/nav_chat" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
